syntax = "proto3";
package bringyour;

option go_package = "github.com/urnetwork/connect/protocol";


message ExtenderHeader {
    string DestinationHost = 1;
    uint32 DestinationPort = 2;
    uint64 Timestamp = 3;
    bytes Nonce = 4;
    bytes Signature = 5;
}
